ing.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jenkins
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - jenkins.thetestpad.com
      secretName: jenkins-k8s-tls
  rules:
    - host: jenkins.thetestpad.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: jenkins-svc
              servicePort: 8080
